--- a/templates/updateItems.html
+++ b/templates/updateItems.html
@@ -10,11 +10,11 @@ Update
 {% endblock %}
 
 {% block content %}
-<table class="table-insert">
-    <form method="POST" action="/home/updateItems/{{item.id}}">
+<table class="container">
+    <form method="POST" action="/home/updateItems/{{item.id}}" >
         {% csrf_token %}
-        <tr><td><input type="text" name="item" value="{{item.item}}"></td>
-            <td><select name="item_type">
+        <tr><td><input type="text" name="item" value="{{item.item}}" class="form-control"></td>
+            <td><select name="item_type" class="form-control">
                     <option value="{{item.item_type}}">{{item.item_type}}</option>
                     <option value="Salaries and wages">Salaries and wages</option>
                     <option value="Utility expenses">Utility expenses</option>
@@ -27,7 +27,7 @@ Update
                 </select>
             </td>
         </tr>
-        <tr><td><input type="text" name="cost" value="{{item.cost}}"></td>
+        <tr><td><input type="text" name="cost" value="{{item.cost}}" class="form-control"></td>
             <td><label>Cost Type:</label><br>
                 {% if item.cost_type == "Income" %}
                 <input type="radio" name="cost_type" value="Income" checked>Income
@@ -41,8 +41,9 @@ Update
         <tr><td><textarea name="remark">{{item.remark}}</textarea></td>
             <td><input type="date" name="date" placeholder="MM/DD/YYYY" value="{{item.date}}"></td>
         </tr>
-        <tr><td colspan="2"><input type="submit" value="Update"></td></tr>
-    </form>      
+        <tr><td colspan="2"><button type="submit" class="btn btn-outline-info btn-sm">Update</button></td></tr>
+    </form>    
+    <td><a href="/home/"><button type="button" class="btn btn-outline-secondary btn-sm">Back</button></a></td> 
     </table>
 
 {% endblock %}
