--- a/templates/register.html
+++ b/templates/register.html
@@ -5,20 +5,24 @@ Register
 {% endblock %}
 
 {% block content %}
-<div>
-    <div>
-        {% for message in messages %}
-        <p>{{message}}</p>
-        {% endfor %}
+<div class="container">
+    <div class="row">
+        <div class="col">
+            {% for message in messages %}
+            <p>{{message}}</p>
+            {% endfor %}
+        </div>
+        <div class="col">
+            <form method="POST" action="register">
+                {% csrf_token %}
+                <input type="text" name="first_name" placeholder="First Name" required><br><br>
+                <input type="text" name="last_name" placeholder="Last Name" required><br><br>
+                <input type="text" name="username" placeholder="User Name" required><br><br>
+                <input type="password" name="password" placeholder="Password" required><br><br>
+                <input type="password" name="repassword" placeholder="Re-Password" required><br><br>
+                <input type="submit" value="Create User">
+            </form>
+        </div>
     </div>
-    <form method="POST" action="register">
-        {% csrf_token %}
-        <input type="text" name="first_name" placeholder="First Name" required><br><br>
-        <input type="text" name="last_name" placeholder="Last Name" required><br><br>
-        <input type="text" name="username" placeholder="User Name" required><br><br>
-        <input type="password" name="password" placeholder="Password" required><br><br>
-        <input type="password" name="repassword" placeholder="Re-Password" required><br><br>
-        <input type="submit" value="Create User">
-    </form>
 </div>
 {% endblock %}
