--- a/templates/home.html
+++ b/templates/home.html
@@ -5,92 +5,63 @@ Home
 {% endblock %}
 
 {% block header %}
-<label>Welcome {{user.first_name}}, </label>
+<div class="mx-5">
+    <label>Welcome {{user.first_name}}, </label>
 <label><a href="/user/logout">Logout</a></label>
+</div>
 {% endblock %}
 
 {% block content %}
-<table class="container">
-    <form method="POST" action="insertItems">
-        {% csrf_token %}
-        <tr><td><input type="text" name="item" placeholder="Item" required></td><td>
-        <select name="item_type" required>
-        <option value="empty">--Item Type--</option>
-        <option value="Salaries and wages">Salaries and wages</option>
-        <option value="Utility expenses">Utility expenses</option>
-        <option value="Administration expenses">Administration expenses</option>
-        <option value="Finance costs">Finance costs</option>
-        <option value="Depreciation">Depreciation</option>
-        <option value="Impairment losses">Impairment losses</option>
-        <option value="Food">Food</option>
-        <option value="Others">Others</option>
-        </select></td></tr>
-        <tr><td><input type="text" name="cost" placeholder="Cost" required></td>
-        <td><label>Cost Type:</label><br><input type="radio" name="cost_type" value="Income" required>Income
-        <input type="radio" name="cost_type" value="Expense">Expense</td></tr>
-        <tr><td colspan="2"><textarea name="remark" placeholder="remark"></textarea></td></tr>
-        <tr><td colspan="2"><button type="submit" class="btn btn-outline-info btn-sm">Submit</button></td></tr>
-        <tr><td>Total income: $ {{income}}</td><td>Total expense: $ {{expense}}</td></tr>
-    </form>      
+<div class="row justify-content-md-center mx-5">
+    <table style="text-align:center" class="table table-borderless">
+        <form method="POST" action="insertItems">
+            {% csrf_token %}
+            <tr><td colspan="3"></td><td><input type="text" name="item" placeholder="Item" required><td><select name="item_type" required>
+            <option value="empty">--Item Type--</option>
+            <option value="Salaries and wages">Salaries and wages</option>
+            <option value="Utility expenses">Utility expenses</option>
+            <option value="Administration expenses">Administration expenses</option>
+            <option value="Finance costs">Finance costs</option>
+            <option value="Depreciation">Depreciation</option>
+            <option value="Impairment losses">Impairment losses</option>
+            <option value="Food">Food</option>
+            <option value="Others">Others</option>
+            </select></td><td colspan="3"></td></tr>
+            <tr><td colspan="3"></td><td><input type="text" name="cost" placeholder="Cost" required></td>
+            <td>Cost Type: <input type="radio" name="cost_type" value="Income" required> Income 
+            <input type="radio" name="cost_type" value="Expense"> Expense </td><td colspan="3"></td></tr>
+            <tr><td colspan="3"></td><td><textarea name="remark" placeholder="remark"></textarea></td>
+                <td><button type="submit" class="btn btn-outline-info btn-sm">Submit</button></td><td colspan="3"></td></tr>
+        </form>
+            <tr><td colspan="3"></td><td>Total income: $ {{income}}</td><td>Total expense: $ {{expense}}</td><td colspan="3"></td></tr>
+            <tr><td colspan="8">How many days you want to predict?</td></tr>
+        <form action="/home/" method="POST" id="days_form">
+            {% csrf_token %}
+            <tr><td colspan="8">Predicting Type: <input type="radio" name="predict_type" value="income"> Income 
+                <input type="radio" name="predict_type" value="expense"> Expense <input type="number" name="days" placeholder="days">
+                <button type="submit" class="btn btn-warning btn-sm">Predict</button></td></tr>
+        </form>
+            <!-- <tr><td colspan="8">{% for message in messages %}{{message}}{% endfor %}</td></tr>
+            <tr><td colspan="8">{% autoescape off %}{{predict_list}}{% endautoescape %}</td></tr> -->
     </table>
-    <div class="container">
-        <br/><br/>
-        <div class="row justify-content-md-center">
-            <div class="col">
-            </div>
-            <div class="col">
-                <p>How many days you want to predict?</p>
-            </div>
-            <div class="col">
-            </div>
-        </div>
-        <div class="row justify-content-md-center">
-            <div class="col">
-            </div>
-            <div class="col">
-                <form action="/home/" method="POST" id="days_form">
-                    {% csrf_token %}
-                    <input type="number" name="days" placeholder="days">
-                    <button type="submit" class="btn btn-warning btn-sm">Predict</button>
-                </form>
-            </div>
-            <div class="col">
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-            </div>
-            <div class="col">
-                {% for message in messages %}
-                <p>{{message}}</p>
-                {% endfor %}
-                {% autoescape off %}
-                {{predict_list}}
-                {% endautoescape %}
-            </div>
-            <div class="col">
-            </div>
-        </div>
-        <br/><br/>
-    </div>
-    <div class="container">
-        <table>
-            <tr><th>Item</th><th>Item Type</th><th>Cost</th><th>Cost Type</th><th>Remark</th><th>Date</th></tr>
-            {% for item in items %}
-            <tr>
-                <td>{{item.item}}</td>
-                <td>{{item.item_type}}</td>
-                <td>{{item.cost}}</td>
-                <td>{{item.cost_type}}</td>
-                <td>{{item.remark}}</td>
-                <td>{{item.date}}</td>
-                <td><a href="updateItems/{{item.id}}"><button type="button" class="btn btn-primary btn-sm">Update</button></a></td>
-                <td><a href="deleteItems/{{item.id}}"><button type="button" class="btn btn-outline-danger btn-sm">Delete</button></a></td>
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
-
+    {% for message in messages %}{{message}}{% endfor %}
+    {% autoescape off %}{{predict_list}}{% endautoescape %}
+</div>
+<div class="row justify-content-md-center mx-5 p-3 table-success">
+    <table class="table-hover">
+        <tr><th>Item</th><th>Item Type</th><th>Cost</th><th>Cost Type</th><th>Remark</th><th>Date</th></tr>
+        {% for item in items %}
+        <tr>
+            <td>{{item.item}}</td>
+            <td>{{item.item_type}}</td>
+            <td>{{item.cost}}</td>
+            <td>{{item.cost_type}}</td>
+            <td>{{item.remark}}</td>
+            <td>{{item.date}}</td>
+            <td><a href="updateItems/{{item.id}}"><button type="button" class="btn btn-primary btn-sm">Update</button></a></td>
+            <td><a href="deleteItems/{{item.id}}"><button type="button" class="btn btn-outline-danger btn-sm">Delete</button></a></td>
+        </tr>
+        {% endfor %}
+    </table>
+</div>
 {% endblock %}
