--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@ Home
 
 {% block content %}
 <div class="row justify-content-md-center mx-5">
-    <table style="text-align:center" class="table table-borderless">
+    <table id="table-item" class="table table-borderless" style="text-align: center">
         <form method="POST" action="insertItems">
             {% csrf_token %}
             {{item_form}}
@@ -21,7 +21,7 @@ Home
         </form>
             <tr><td>Total income: $ {{income}}</td><td>Total expense: $ {{expense}}</td></tr>
             <tr><td colspan="2">How many days do you want to predict?</td></tr>
-        <form action="/home/" method="POST">
+        <form method="POST" class="day-form" action='home'>
             {% csrf_token %}
             {{day_form}}
             <tr><td></td><td><button type="submit" class="btn btn-warning btn-sm">Predict</button></td></tr>
@@ -29,6 +29,9 @@ Home
     </table>
     {% for message in messages %}{{message}}{% endfor %}
     {% autoescape off %}{{predict_list}}{% endautoescape %}
+</div>
+<div class="row justify-content-md-center mx-5">
+    <canvas id="showChart" width="100%" height="100%"></canvas>
 </div>
 <div class="row justify-content-md-center mx-5 p-3 table-success">
     <table class="table-hover">
@@ -48,3 +51,84 @@ Home
     </table>
 </div>
 {% endblock %}
+
+{% block jquery %}
+<script>
+    $(document).ready(function(){
+        var form = $(".day-form")
+        form.submit(function(event){
+            event.preventDefault()
+            var data = $(this).serialize()
+            //var endpoint = form.attr("data-url") || window.location.href
+            var endpoint = "/home/testing/data"
+
+            $.ajax({
+                method: "POST",
+                url: endpoint,
+                data: data,
+                success: handleFormSuccess,
+                error: handleFormError,
+            })
+
+            function handleFormSuccess(data, textStatus, jqXHR){
+                //console.log(data)
+                //console.log(textStatus)
+                //console.log(jqXHR)
+                form[0].reset(); // reset form data
+
+                //// Convert data to Json
+                //predict_data = data.predict.match(/\d+(?:\.\d+)?/g).map(Number)
+                predict_data = JSON.parse(data.predict)
+                predict_date_label = JSON.parse(data.predict_date)
+                orginal_data = JSON.parse(data.orginal)
+                orginal_date_label = JSON.parse(data.orginal_date)
+
+                var ctx = document.getElementById('showChart');
+                var myChart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: predict_date_label,
+                        datasets: [
+                        {
+                            label: 'Prediction',
+                            backgroundColor: [
+                                'rgba(54, 162, 235, 0.2)'
+                            ],
+                            borderColor: [
+                                'rgba(54, 162, 235, 0.2)'
+                            ],
+                            fill: false,
+                            data: predict_data,
+                        }] 
+                    },
+                    options: {
+                        scales: {
+                            xAxes: [{
+                                scaleLabel: {
+                                    display: true,
+                                    labelString: 'Date'
+                                }
+                            }],
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero:true
+                                },
+                                scaleLabel: {
+                                    display: true,
+                                    labelString: 'Cost'
+                                }
+                            }]
+                        }
+                    }
+                })
+            }
+        
+            function handleFormError(jqXHR, textStatus, errorThrown){
+                console.log(jqXHR)
+                console.log(textStatus)
+                console.log(errorThrown)
+            }
+        })
+    })
+</script>
+{% endblock%}
