Adjusted some codings

--- a/templates/home.html
+++ b/templates/home.html
@@ -60,7 +60,7 @@ Home
             event.preventDefault()
             var data = $(this).serialize()
             //var endpoint = form.attr("data-url") || window.location.href
-            var endpoint = "/home/testing/data"
+            var endpoint = "/home/dataset/"
 
             $.ajax({
                 method: "POST",
