--- a/templates/dataset_request.html
+++ b/templates/dataset_request.html
@@ -3,7 +3,8 @@
 {% block content %}
     <form method='POST' class="day-form" data-url="/home/data/">
         {{form.as_p}}
-        <button type='submit'>Submit</button>
+        {{data_response}}
+        <!-- <button type='submit'>Submit</button> -->
     </form>
 {% endblock content %}
 
